fixed ipad mode title text squish issue

--- a/web_scripts/static/css/common.css
+++ b/web_scripts/static/css/common.css
@@ -11,6 +11,7 @@ h1 {
     text-align: center;
     font-size: 1.5rem;
     font-family: 'Lato', sans-serif;
+    line-height: normal;
 }
 
 h2 {
